# xournal

./: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  intltool-extract  intltool-merge  intltool-update  log
DEBIAN/: conffiles  control  md5sums  postinst
data/: Makefile.am  Makefile.in  xournal.base64  xournal.conf  xournal.service
data/help/ru_RU/: xournal.xml
data/maemo/: config  xo-hildon_ui.xml  xournal.desktop  xournal.service
debian/: changelog  changelog.dches  control  docs  files  rules  xournal.1  xournal.postinst  xournal.substvars
debian/xournal/DEBIAN/: control  md5sums  postinst  postrm
debian/xournal/opt/maemo/usr/share/locale/it_IT/LC_MESSAGES/: xournal.mo
debian/xournal/opt/maemo/usr/share/osso-help/en_GB/: xournal.xml
debian/xournal/opt/maemo/usr/share/xournal/: NEWS  xo-hildon_ui.xml
debian/xournal/usr/share/: xournal
debian/xournal/usr/share/doc/: xournal
debian/xournal/usr/share/locale/en_GB/LC_MESSAGES/: xournal.mo
debian/xournal/usr/share/locale/it_IT/LC_MESSAGES/: xournal.mo
debian/xournal/usr/share/osso-help/en_GB/: xournal.xml
debian/xournal/usr/share/osso-help/en_US/: xournal.xml
debian/xournal/usr/share/osso-help/ru_RU/: xournal.xml
debian/xournal/usr/share/pixmaps/: xournal
po/: POTFILES.in  en_GB.po  it_IT.po
src/: Makefile.am  Makefile.in  main.c  xo-callbacks.c  xo-callbacks.c~  xo-callbacks.h  xo-file.c  xo-file.h  xo-hildon_ui.c  xo-hildon_ui.h  xo-hildon_ui.xml  xo-interface.c  xo-interface.h  xo-misc.c  xo-misc.c~  xo-misc.h  xo-paint.c  xo-paint.h  xo-print.c  xo-print.h  xo-shapes.c  xo-support.c  xournal.h
src/hildon-extras/: Makefile.am  Makefile.in  he-arrowed-entry.c  he-arrowed-entry.h  he-check-button.c  he-check-button.h  he-color-button.c  he-color-button.h  he-color-dialog.c  he-color-dialog.h  he-color-selector.c  he-color-selector.h  he-color-size-dialog.c  he-color-size-dialog.h  he-color-size-selector.c  he-color-size-selector.h  he-font-button.c  he-font-button.h  he-font-dialog.c  he-font-dialog.h  he-font-selector.c  he-font-selector.h  he-fullscreen-button.c  he-helper.c  he-helper.h  he-overlay-button.c  he-simple-color-dialog.c  he-simple-color-dialog.h
src/ttsubset/: Makefile.in
