#
# This file is part of Xournal for Maemo
#
# Copyright (C) 2005 Nokia Corporation.
#
# This software is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
#
# This software is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this software; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
# 02110-1301 USA
#

# We do not follow GNU standars as we don't provide AUTHORS, Changelog,... files
# Thus, tell automake to not complain about those missing files
#AUTOMAKE_OPTIONS = foreign

serviceentry_DATA = maemo/xournal.service

desktopentry_DATA = maemo/xournal.desktop

icon_26x26_DATA = icons/26x26/xournal.png 
icon_40x40_DATA = icons/40x40/xournal.png
icon_48x48_DATA = icons/48x48/xournal.png
icon_scalable_DATA = icons/scalable/xournal.png
icon_mimetype24_DATA = icons/24x24/gnome-mime-application-x-xoj.png
icon_mimetype48_DATA = icons/48x48/gnome-mime-application-x-xoj.png
icon_mimetype64_DATA = icons/64x64/gnome-mime-application-x-xoj.png

helpfile_engb_DATA = help/en_GB/xournal.xml
helpfile_enus_DATA = help/en_US/xournal.xml
helpfile_ruru_DATA = help/ru_RU/xournal.xml
helpgraphics_DATA = help/graphics/*

dotconfig_DATA = maemo/config

mime_DATA = maemo/xournal.xml

news_DATA = NEWS
pixmap_DATA = pixmaps/*
themedefault_DATA = pixmaps/default/*
backup_DATA = xournal.conf
uixml_DATA = maemo/xo-hildon_ui.xml

EXTRA_DIST = $(serviceentry_DATA) $(desktopentry_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_48x48_DATA) $(icon_scalable_DATA) $(icon_mimetype24_DATA) $(icon_mimetype48_DATA) $(icon_mimetype64_DATA) $(helpfile_engb_DATA) $(helpfile_enus_DATA) $(news_DATA) $(helpgraphics_DATA) $(mime_DATA) $(backup_DATA) $(uixml_DATA)

